@@ -1604,11 +1604,28 @@ multibuild-linux-alpha: \
 # Linux/ia64
 multibuild-linux-ia64: multibuild-porting64-gcc # TODO
 
-# Linux/mips64eb with 64-bit ABI
-multibuild-linux-mipseb-64: multibuild-porting64-gcc # TODO
-
-# Linux/mips64el with 64-bit ABI
-multibuild-linux-mipsel-64: multibuild-porting64-gcc # TODO
+# Linux/mips64eb and Linux/mips64el with 64-bit ABI
+multibuild-linux-mips-64: \
+  build-porting64-gcc-portability \
+  build-porting64-gcc-safety3 \
+  build-porting64-gcc-heapcodes \
+  build-porting64-gcc-one_free_bit_heapcodes-malloc \
+  build-porting64-gcc-one_free_bit_heapcodes-trivialmap \
+  build-porting64-gcc-generic64_heapcodes \
+  build-porting64-gcc-heapcodes-spvw_pages \
+  build-porting64-gcc-typecodes-spvw_pure_pages \
+  build-porting64-gcc-typecodes-spvw_mixed_pages \
+  build-porting64-gcc-heapcodes-spvw_mixed_blocks \
+  build-porting64-gcc-typecodes-spvw_mixed_blocks-malloc \
+  build-porting64-gcc-typecodes-spvw_mixed_blocks-trivialmap \
+  build-porting64-gcc-spvw_pure_blocks \
+  build-porting64-gcc-limited_memory \
+  build-porting64-gcc-old_gc \
+  build-porting64-gcc-multithread_gc \
+  build-porting64-gcc-safety0 \
+  build-porting64-gcc-safety0-optimized \
+  build-porting64-gcc-debug_gcsafety \
+  build-porting64-gcc-debug_ari_asm
 
 # Linux/powerpc64
 multibuild-linux-powerpc64: \
